fixes for configuration

--- a/_config.yml
+++ b/_config.yml
@@ -58,7 +58,7 @@ github:
 # Visit Analysis
 analytics:
   google: UA-162295889-1
-  # cnzz: cnzz_stat_icon_1264408226
+  cnzz: cnzz_stat_icon_1278897451
 # disqus:
 #   name: walterlv
 #   url: https://walterlv.com
