--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ links:
     url: /about/
 links-light:
   - icon: users
-    title: 朋友
+    title: FRIENDS
     url: /friends
   - icon: rss
     title: RSS
