--- a/_config.yml
+++ b/_config.yml
@@ -94,6 +94,13 @@ defaults:
       layout: "post"
       author: "Jiayi"
       permalink: "/article/:title.html"
+  - scope:
+      path: "_private"
+      type: "articles"
+    values:
+      layout: "post"
+      author: "Jiayi"
+      permalink: "/article/:title.html"
 
 # Plugins
 plugins:
