--- a/_config.yml
+++ b/_config.yml
@@ -36,6 +36,8 @@ links:
     url: /projects
   - title: About
     url: /about/
+  - title: Private
+    url: /
 links-light:
   - icon: users
     title: FRIENDS
@@ -96,7 +98,7 @@ defaults:
       permalink: "/article/:title.html"
   - scope:
       path: "_private"
-      type: "private articles"
+      type: "private"
     values:
       layout: "post"
       author: "Jiayi"
