--- a/_config.yml
+++ b/_config.yml
@@ -94,13 +94,13 @@ defaults:
       layout: "post"
       author: "Jiayi"
       permalink: "/article/:title.html"
-  # - scope:
-  #     path: "_private"
-  #     type: "private"
-  #   values:
-  #     layout: "post"
-  #     author: "Jiayi"
-  #     permalink: "/private/:title.html"
+  - scope:
+      path: "_private"
+      type: "private"
+    values:
+      layout: "post"
+      author: "Jiayi"
+      permalink: "/private/:title.html"
 
 # Plugins
 plugins:
