update social account

--- a/_config.yml
+++ b/_config.yml
@@ -49,7 +49,7 @@ github:
   username: shieldjy
   link: https://github.com/shieldjy
 facebook:
-  username: 李珈毅
+  username: PlusOne97
 twitter:
   username: PlusOne97
 # stackoverflow:
