update personal files

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: jiayi
 post_author: Li Jiayi
 description: Li Jiayi，student now majoring electronics in Tongji Uni., Shanghai.
 mail: lijiayi19971127@hotmail.com
-about: Student major in electronics in Tongji University
+about: Student\n Major Electronics\n Tongji University
 
 # Site Appearance
 logo: /assets/img/logo.png
