--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 title: shieldjy
 author: jiayi
 post_author: Li Jiayi
-description: Li Jiayi，student now majoring electronics in Tongji Uni., Shanghai.
+description: Li Jiayi，student now majoring Electronics at Tongji Uni., Shanghai.
 mail: lijiayi19971127@hotmail.com
-about: Student\n Major Electronics\n Tongji University
+about: 'Student\nMajor Electronics\nTongji University'
 
 # Site Appearance
 logo: /assets/img/logo.png
