--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ author: jiayi
 post_author: Li Jiayi
 description: Li Jiayi，student now majoring Electronics at Tongji Uni., Shanghai.
 mail: lijiayi19971127@hotmail.com
-about: |Student+Major Electronics+Tongji University
+about: "Student \nMajor Electronics \nTongji University"
 
 # Site Appearance
 logo: /assets/img/logo.png
