--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ author: jiayi
 post_author: Li Jiayi
 description: Li Jiayi，student now majoring Electronics at Tongji Uni., Shanghai.
 mail: lijiayi19971127@hotmail.com
-about: "Student         
-\nMajor Electronics           
+about: "Student\t\t
+\nMajor Electronics\t\t
 \nTongji University"
 
 # Site Appearance
