--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ author: jiayi
 post_author: Li Jiayi
 description: Li Jiayi，student now majoring Electronics at Tongji Uni., Shanghai.
 mail: lijiayi19971127@hotmail.com
-about: "Student\t\t
-\nMajor Electronics\t\t
-\nTongji University"
+about: "Student\t\t-
+Major Electronics\t\t-
+Tongji University"
 
 # Site Appearance
 logo: /assets/img/logo.png
