--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ post_author: Li Jiayi
 description: Li Jiayi，student now majoring Electronics at Tongji Uni., Shanghai.
 mail: lijiayi19971127@hotmail.com
 about: "Student
-<p>Major Electronics
-<p>Tongji University"
+<p>Major Electronics</p>
+<p>Tongji University</p>"
 
 # Site Appearance
 logo: /assets/img/logo.png
