delete friend tag

--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ links:
     url: /
   # - title: Articles
   #   url: /mind
-  - title: Friends
-    url: /friends
+  # - title: Friends
+  #   url: /friends
   - title: Projects
     url: /projects
   - title: About
