--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@ author: jiayi
 post_author: Li Jiayi
 description: Li Jiayi，student now majoring Electronics at Tongji Uni., Shanghai.
 mail: lijiayi19971127@hotmail.com
-about: "Student
-<p>Major Electronics</p>
-<p>Tongji University</p>"
+about: "PhD Candidate
+<p>Nanyang Technological University</p>
+<p>Singapore</p>"
 
 # Site Appearance
 logo: /assets/img/logo.png
