--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@ post_author: Li Jiayi
 description: Li Jiayi，student now majoring Electronics at Tongji Uni., Shanghai.
 mail: lijiayi19971127@hotmail.com
 about: "PhD Candidate
-<p>Nanyang Technological University</p>
-<p>Singapore</p>"
+<p>Neuromorphic Devices</p>
+<p>Nanyang Technological University - Singapore</p>"
 
 # Site Appearance
 logo: /assets/img/logo.png
