--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: Li Jiayi，student now majoring Electronics at Tongji Uni., Shangha
 mail: lijiayi19971127@hotmail.com
 about: "PhD Candidate
 <p>Neuromorphic Devices</p>
-<p>Nanyang Technological University - Singapore</p>"
+<p>NTU - Singapore</p>"
 
 # Site Appearance
 logo: /assets/img/logo.png
