--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,8 @@ facebook:
   username: PlusOne97
 twitter:
   username: PlusOne97
+orcid:
+  id: 0000-0001-5016-4239
 # stackoverflow:
 #   link: https://stackoverflow.com/users/6233938/walterlv
 
