--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,7 @@ twitter:
   username: PlusOne97
 orcid:
   id: 0000-0001-5016-4239
+  link: https://orcid.org/0000-0001-5016-4239
 # stackoverflow:
 #   link: https://stackoverflow.com/users/6233938/walterlv
 
